--- a/client-buApp/public/index.html
+++ b/client-buApp/public/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet"
     href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.1/mapbox-gl-directions.css"
     type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
   <title>BoatUsers</title>
 </head>
 
